# testament

./: Cargo.toml
soroban-token-spec/: Cargo.toml
src/: lib.rs
